[package]
name = "quotes_dfa"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conversions-rust-lib = {version = "0.1.0", path="../conversions-rust-lib"}
liberr = { version = "0.1.0", path="../liberr" }